Fixed some links bags

--- a/scss/blocks/_benefits.scss
+++ b/scss/blocks/_benefits.scss
@@ -9,7 +9,7 @@
     position: relative;
 
     &:before {
-      content: url('../../img/icons/bubbles.png');
+      content: url('./img/icons/bubbles.png');
       position: absolute;
       top: 52px;
       right: 0;
