--- a/scss/settings/_fonts.scss
+++ b/scss/settings/_fonts.scss
@@ -1,39 +1,39 @@
 @font-face {
   font-family: 'Alegreya Sans';
-  src: url('../../fonts/AlegreyaSans-Regular.woff2') format('woff2'),
-      url('../../fonts/AlegreyaSans-Regular.woff') format('woff');
+  src: url('./fonts/AlegreyaSans-Regular.woff2') format('woff2'),
+      url('./fonts/AlegreyaSans-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Alegreya Sans';
-  src: url('../../fonts/AlegreyaSans-Bold.woff2') format('woff2'),
-      url('../../fonts/AlegreyaSans-Bold.woff') format('woff');
+  src: url('./fonts/AlegreyaSans-Bold.woff2') format('woff2'),
+      url('./fonts/AlegreyaSans-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Alegreya Sans';
-  src: url('../../fonts/AlegreyaSans-Light.woff2') format('woff2'),
-      url('../../fonts/AlegreyaSans-Light.woff') format('woff');
+  src: url('./fonts/AlegreyaSans-Light.woff2') format('woff2'),
+      url('./fonts/AlegreyaSans-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Alegreya Sans';
-  src: url('../../fonts/AlegreyaSans-Italic.woff2') format('woff2'),
-      url('../../fonts/AlegreyaSans-Italic.woff') format('woff');
+  src: url('./fonts/AlegreyaSans-Italic.woff2') format('woff2'),
+      url('./fonts/AlegreyaSans-Italic.woff') format('woff');
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Alegreya Sans';
-  src: url('../../fonts/AlegreyaSans-LightItalic.woff2') format('woff2'),
-      url('../../fonts/AlegreyaSans-LightItalic.woff') format('woff');
+  src: url('./fonts/AlegreyaSans-LightItalic.woff2') format('woff2'),
+      url('./fonts/AlegreyaSans-LightItalic.woff') format('woff');
   font-weight: 300;
   font-style: italic;
 }
@@ -41,16 +41,16 @@
 
 @font-face {
   font-family: 'Alegreya Sans';
-  src: url('../../fonts/AlegreyaSans-ExtraBold.woff2') format('woff2'),
-      url('../../fonts/AlegreyaSans-ExtraBold.woff') format('woff');
+  src: url('./fonts/AlegreyaSans-ExtraBold.woff2') format('woff2'),
+      url('./fonts/AlegreyaSans-ExtraBold.woff') format('woff');
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Alegreya Sans';
-  src: url('../../fonts/AlegreyaSans-BoldItalic.woff2') format('woff2'),
-      url('../../fonts/AlegreyaSans-BoldItalic.woff') format('woff');
+  src: url('./fonts/AlegreyaSans-BoldItalic.woff2') format('woff2'),
+      url('./fonts/AlegreyaSans-BoldItalic.woff') format('woff');
   font-weight: bold;
   font-style: italic;
 }
