--- a/main.css
+++ b/main.css
@@ -310,43 +310,43 @@ template {
 
 @font-face {
   font-family: 'Alegreya Sans';
-  src: url("../../fonts/AlegreyaSans-Regular.woff2") format("woff2"), url("../../fonts/AlegreyaSans-Regular.woff") format("woff");
+  src: url("./fonts/AlegreyaSans-Regular.woff2") format("woff2"), url("./fonts/AlegreyaSans-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
   font-family: 'Alegreya Sans';
-  src: url("../../fonts/AlegreyaSans-Bold.woff2") format("woff2"), url("../../fonts/AlegreyaSans-Bold.woff") format("woff");
+  src: url("./fonts/AlegreyaSans-Bold.woff2") format("woff2"), url("./fonts/AlegreyaSans-Bold.woff") format("woff");
   font-weight: bold;
   font-style: normal; }
 
 @font-face {
   font-family: 'Alegreya Sans';
-  src: url("../../fonts/AlegreyaSans-Light.woff2") format("woff2"), url("../../fonts/AlegreyaSans-Light.woff") format("woff");
+  src: url("./fonts/AlegreyaSans-Light.woff2") format("woff2"), url("./fonts/AlegreyaSans-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal; }
 
 @font-face {
   font-family: 'Alegreya Sans';
-  src: url("../../fonts/AlegreyaSans-Italic.woff2") format("woff2"), url("../../fonts/AlegreyaSans-Italic.woff") format("woff");
+  src: url("./fonts/AlegreyaSans-Italic.woff2") format("woff2"), url("./fonts/AlegreyaSans-Italic.woff") format("woff");
   font-weight: normal;
   font-style: italic; }
 
 @font-face {
   font-family: 'Alegreya Sans';
-  src: url("../../fonts/AlegreyaSans-LightItalic.woff2") format("woff2"), url("../../fonts/AlegreyaSans-LightItalic.woff") format("woff");
+  src: url("./fonts/AlegreyaSans-LightItalic.woff2") format("woff2"), url("./fonts/AlegreyaSans-LightItalic.woff") format("woff");
   font-weight: 300;
   font-style: italic; }
 
 @font-face {
   font-family: 'Alegreya Sans';
-  src: url("../../fonts/AlegreyaSans-ExtraBold.woff2") format("woff2"), url("../../fonts/AlegreyaSans-ExtraBold.woff") format("woff");
+  src: url("./fonts/AlegreyaSans-ExtraBold.woff2") format("woff2"), url("./fonts/AlegreyaSans-ExtraBold.woff") format("woff");
   font-weight: 800;
   font-style: normal; }
 
 @font-face {
   font-family: 'Alegreya Sans';
-  src: url("../../fonts/AlegreyaSans-BoldItalic.woff2") format("woff2"), url("../../fonts/AlegreyaSans-BoldItalic.woff") format("woff");
+  src: url("./fonts/AlegreyaSans-BoldItalic.woff2") format("woff2"), url("./fonts/AlegreyaSans-BoldItalic.woff") format("woff");
   font-weight: bold;
   font-style: italic; }
 
@@ -458,7 +458,7 @@ h1, h2, h3, h4, h5 {
   min-height: 650px;
   height: 100vh;
   position: relative;
-  background: url("../../img/big-leaf.png") right bottom no-repeat;
+  background: url("./img/big-leaf.png") right bottom no-repeat;
   background-color: #86c3d7;
   color: #fff; }
   .main-page__container {
@@ -474,10 +474,10 @@ h1, h2, h3, h4, h5 {
     justify-content: space-between;
     height: 100%;
     padding: 24px 0 47px;
-    background: url("../../img/snack.png") right center/50% auto no-repeat; }
+    background: url("./img/snack.png") right center/50% auto no-repeat; }
   .main-page:after {
     content: "";
-    background: url("../../img/pics-main.png") no-repeat;
+    background: url("./img/pics-main.png") no-repeat;
     width: 460px;
     height: 341px;
     position: absolute;
@@ -485,7 +485,7 @@ h1, h2, h3, h4, h5 {
     right: 4.5%; }
   .main-page:before {
     content: "";
-    background: url("../../img/leaves3.png") no-repeat;
+    background: url("./img/leaves3.png") no-repeat;
     width: 59px;
     height: 113px;
     position: absolute;
@@ -687,7 +687,7 @@ h1, h2, h3, h4, h5 {
     padding: 0 3%;
     position: relative; }
     .benefits__item:before {
-      content: url("../../img/icons/bubbles.png");
+      content: url("./img/icons/bubbles.png");
       position: absolute;
       top: 52px;
       right: 0;
@@ -778,7 +778,7 @@ h1, h2, h3, h4, h5 {
     position: absolute; }
 
 .review__display {
-  background: url("../../img/review_layer2.png") right top no-repeat;
+  background: url("./img/review_layer2.png") right top no-repeat;
   background-color: #f8faf9;
   padding: 50px 45px 20px;
   position: relative;
@@ -865,19 +865,19 @@ h1, h2, h3, h4, h5 {
     object-fit: cover; }
 
 .order {
-  background-image: url("../../img/layer1.png");
+  background-image: url("./img/layer1.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   color: #365a49;
   position: relative; }
   .order:before {
-    content: url("../../img/berries7.png");
+    content: url("./img/berries7.png");
     position: absolute;
     left: 2%;
     bottom: 10%; }
   .order:after {
-    content: url("../../img/leaves7.png");
+    content: url("./img/leaves7.png");
     position: absolute;
     right: 0;
     bottom: 9%; }
@@ -949,7 +949,7 @@ h1, h2, h3, h4, h5 {
   .radio--checkbox .radio__visible {
     border-radius: 0; }
     .radio--checkbox .radio__visible::before {
-      background: url("../../img/icons/tick.png") center center no-repeat; }
+      background: url("./img/icons/tick.png") center center no-repeat; }
   .radio:last-child {
     margin-right: 0; }
   .radio__elem {
