--- a/scss/blocks/_main-page.scss
+++ b/scss/blocks/_main-page.scss
@@ -4,7 +4,7 @@
   height: 100vh; //  для отображения секции в высоту окна
 
   position: relative;
-  background: url('../../img/big-leaf.png') right bottom no-repeat;
+  background: url('./img/big-leaf.png') right bottom no-repeat;
   
   background-color: $light-grey-blue;
   color: $white;
@@ -16,14 +16,14 @@
     height: 100%;
     padding: 24px 0 47px;
 
-    background: url('../../img/snack.png') right center / 50% auto no-repeat; // версия Сабанцева. 
+    background: url('./img/snack.png') right center / 50% auto no-repeat; // версия Сабанцева. 
     // Так мы достигаем эффекта, когда батончики не наползают на текст.
 
   }
   
   &:after {
     content: "";
-    background: url('../../img/pics-main.png') no-repeat;
+    background: url('./img/pics-main.png') no-repeat;
     width: 460px;
     height: 341px;
     
@@ -34,7 +34,7 @@
 
   &:before {
     content: "";
-    background: url('../../img/leaves3.png') no-repeat;
+    background: url('./img/leaves3.png') no-repeat;
     width: 59px;
     height: 113px;
     
