--- a/scss/blocks/_review.scss
+++ b/scss/blocks/_review.scss
@@ -1,7 +1,7 @@
 .review {
   
   &__display {
-    background: url('../../img/review_layer2.png') right top no-repeat;
+    background: url('./img/review_layer2.png') right top no-repeat;
     background-color: $light-grey2;
     padding: 50px 45px 20px;
 
