--- a/scss/blocks/_feature.scss
+++ b/scss/blocks/_feature.scss
@@ -5,12 +5,12 @@
   &__icon {
     // width: 45px; // зачем нам здесь ширина? 
     // Если ее задать, иконка грузовика вываливается из своей ширины и отступ до текста меньше, чем по макету
-    margin-right: 9px;
+    margin-right: rem(9px);
   }
 
   &__text {
-    font-size: 16px;
-    max-width: 85px;
+    font-size: rem(16px);
+    max-width: rem(85px);
   }
 
 }
