--- a/scss/blocks/_features.scss
+++ b/scss/blocks/_features.scss
@@ -1,10 +1,10 @@
 .features {
-  @include flex-between;
+  @include flex-center;
   align-items: flex-start;
  
   &__item {
     @include flex-start;
-    margin-right: 46px;
+    margin-right: rem(45px);
     
     &:last-child {
       margin-right: 0;
