--- a/scss/blocks/_order.scss
+++ b/scss/blocks/_order.scss
@@ -12,6 +12,10 @@
     position: absolute;
     left: 2%;
     bottom: 10%;
+
+    @include tablets {
+      display: none;
+    }
   }
 
   &:after {
@@ -19,19 +23,32 @@
     position: absolute;
     right: 0;
     bottom: 9%;
+
+    @include tablets {
+      display: none;
+    }
   }
 
   &__container {
+    @include flex-center;
+    flex-direction: column;
     height: 100%;
-    padding: 85px 0;
+    padding: rem(85px) 0;
+
+    @include tablets {
+      flex: 1;
+      padding: 0 125px 10px;
+    }
+
   }
 
   &__title {
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: rem(40px);
+
+    @include tablets {
+      margin-bottom: rem(35px);
+    }
   }
-
-
-
 
 }
