--- a/scss/blocks/_phone.scss
+++ b/scss/blocks/_phone.scss
@@ -4,16 +4,32 @@
   justify-content: space-between;
   align-items: center;
 
-  &__picture {
-    margin-right: 6px;
+  &:hover .phone__number {
+    box-shadow: 0 0 rem(10px) rgba(0, 0, 0, 0.2);
   }
 
-  &__number {
-    font-size: 24px;
+  &--white {
+    color: $white;
+  }
+
+  &--green {
+    color: $pine;
   }
 
   &__icon {
-    width: 12px;
-    height: 12px;
+    margin-right: rem(6px);
+    width: rem(12px);
+    height: rem(11px);
+    fill: currentColor;    
+  }
+
+  &__number {
+    &--24px {
+      font-size: rem(24px);
+    }
+
+    &--21px {
+      font-size: 21px;
+    }
   }
 }
